--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ a{
 	display: flex;
 	flex-wrap: nowrap;
 	align-items: center;
+	margin-bottom: 2em;
 }
 .topbar__logo{
 	width: 20%;
@@ -113,12 +114,12 @@ a{
 	align-items: center;
 	display: flex;
 }
-.button{
+.buttonOpenModal{
 	width: 18rem;
 	height: 4rem;
 	display: flex;
 }
-.button__play{
+.buttonOpenModal__play{
 	flex-grow: 1;
 	font-size: 1.4rem;
 	color: white;
@@ -127,7 +128,7 @@ a{
 	border-color: transparent;
 	margin: .1rem;
 }
-.button__text{
+.buttonOpenModal__text{
 	flex-grow: 3;
 	font-size: 1.4rem;
 	color: white;
@@ -147,17 +148,17 @@ a{
 	padding: 5rem;
 	color: white;
 }
-.blockImg{
+.blockMarginImg{
 	background-color: #511c74;
 	display: flex;
 	padding: 3rem;
 }
-.blockImg img{
+.blockMarginImg img{
 		width: 100%;
 		height: 100%;
 }
 
-@media screen and (max-width: 1050px) {
+@media screen and (max-width: 1080px) {
 	.blockFullWidthImg{
 	background-position: center;
 	background-size: 1100px;
@@ -187,22 +188,22 @@ a{
 	.arrow{
 		display: inline-block;
 	}
-	.button{
+	.buttonOpenModal{
 	width: 12rem;
 	height: 3rem;
 	display: flex;
 	}
-	.button__play{
+	.buttonOpenModal__play{
 		font-size: 1rem;
 	}
-	.button__text{
+	.buttonOpenModal__text{
 		font-size: .8rem;
 	}
 	.blockTextBold p{
 		font-size: 1.5rem;
 		padding: 2rem;
 	}
-	.blockImg{
+	.blockMarginImg{
 		padding: 0;
 	}
 }
