--- a/style.css
+++ b/style.css
@@ -50,6 +50,9 @@ a{
 	text-decoration: none;
 	color: black;
 }
+html {
+	font-family: Arboria-bold;
+}
 /*content main*/
 
 .main{
@@ -57,27 +60,25 @@ a{
  	display: flex;
 	flex-wrap: wrap;
 }
-/* --------------- start topbar -----------------*/
+/**** start topbar ****/
 .topbar{
 	display: flex;
 	flex-wrap: nowrap;
 	align-items: center;
-	margin-bottom: 2em;
 }
 .topbar__logo{
 	width: 20%;
 	min-width: 12rem;
 }
-.topbar__logo--img{
+.topbar__logo img{
 	width: 100%;
-	padding: 15px 0 15px 5px;
+	padding: 10px 0 10px 5px;
 }
 .menu--mobile{
 	display: none;
 }
-.menu__item{
+.menu__list__item{
 	flex-grow: 2;
-	font-family: Arboria-bold;
 }
 .arrow{
 	position: relative;
@@ -94,13 +95,15 @@ a{
 	transform: rotate(135deg);
 	margin-bottom: 12px;
 }
+.menu {
+}
 .menu__list{
 
 	display: flex;
 	width: 60vw;
 
 }
-		/*end topbar*/
+		/**** end topbar ****/
 
 .blockFullWidthImg{
 	background-image: url("img/Capture1.jpg");
@@ -132,7 +135,6 @@ a{
 	flex-grow: 3;
 	font-size: 1.4rem;
 	color: white;
-	font-family: Arboria-bold;
 	background-color: #db124b;
 	border-color: transparent;
 	margin: .1rem;
@@ -144,7 +146,6 @@ a{
 .blockTextBold p{
 	font-size: 3rem;
 	line-height: 1.5;
-	font-family: Arboria-bold;
 	padding: 5rem;
 	color: white;
 }
@@ -164,7 +165,7 @@ a{
 	background-size: 1100px;
 	background-attachment: none;
 	}
-	.menu__item a{
+	.menu__list__item a{
 	font-size: .8rem;
 	}
 }
@@ -181,8 +182,6 @@ a{
 	}
 	.menu--mobile{
 		width: 5rem;
-		font-family: Arboria-bold;
-		margin-top: ;
 		display: flex;
 	}
 	.arrow{
