--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ html {
 }
 /**** start topbar ****/
 .topbar{
+	height: 4.3rem;
 	display: flex;
 	flex-wrap: nowrap;
 	align-items: center;
@@ -71,8 +72,8 @@ html {
 	min-width: 12rem;
 }
 .topbar__logo img{
-	width: 100%;
-	padding: 10px 0 10px 5px;
+	width: 80%;
+	padding-left: 5px;
 }
 .menu--mobile{
 	display: none;
