--- a/style.css
+++ b/style.css
@@ -176,13 +176,15 @@ html {
 .blockTitleText__title {
 	font-size: 2.8em;
 	margin-bottom: 1.5rem;
+	color: white;
 }
 .blockTitleText__text {
 	font-family: Arboria-medium;
 	font-size: 1.4em;
 	line-height: 2.5;
+	color: white;
 }
-.footer {
+.footerContainer {
 	width: 100%;
 	padding: 1rem 8rem;
 }
@@ -202,13 +204,13 @@ html {
 	font-size: .8em;
 	line-height: 3;	
 }
-.blockParner {
+.blockPartner {
 	width: 50%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
-.blockParner img{
+.blockPartner img{
 	width: 60px;
 	height: 40px;
 	flex-grow: 1;
