--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ html {
 		/**** end topbar ****/
 
 .blockBgImg{
-	background-image: url("img/Capture1.jpg");
+	background-image: url("img/Capture1.png");
 	background-size: 100%;
 	background-repeat: no-repeat;
 	background-attachment: cover;
@@ -148,7 +148,7 @@ html {
 .blockTextBold p{
 	font-size: 3rem;
 	line-height: 1.5;
-	padding: 5rem;
+	padding: 5rem 8rem;
 	color: white;
 }
 .blockMarginImg{
@@ -172,7 +172,7 @@ html {
 .blockTitleText {
 	width: 100%;
 	background-color: #db124b;
-	padding: 2rem 12rem 2rem 12rem;
+	padding: 2rem 8rem;
 }
 .blockTitleText__title {
 	font-size: 2.8em;
@@ -185,8 +185,58 @@ html {
 	line-height: 2.5;
 	color: white;
 }
+.blockInfoFour {
+	background-color: yellow;
+	width: 100%;
+	display: grid;
+	grid-template-columns: 10rem 10rem 10rem 10rem;
+	grid-template-rows: 
+	10rem;
+	grid-gap: 1rem;
+	justify-content: center;
+	align-items: center;
+}
+.blockInfoThree {
+	background-color: yellow;
+	width: 100%;
+	display: grid;
+	grid-template-columns: 10rem 10rem 10rem;
+	grid-template-rows: 
+	10rem;
+	grid-gap: 1rem;
+	justify-content: center;
+	align-items: center;
+}
+.blockInfo__img{
+	width: 80%;
+}
+.blockThreeImg {
+	background-color: cyan;
+	display: grid;
+	width: 100%;
+	grid-template-columns: 25% 25%;
+	grid-template-rows: 
+	30%
+	80%;
+	grid-gap: 2rem;
+	justify-content: center;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+}
+.blockThreeImg img {
+	width: 100%;
+}
+.blockThreeImg__img1 {
+	grid-column: 1;
+}
+.blockThreeImg__img2 {
+	grid-column: 2;
+}
+.blockThreeImg__img3 {
+	grid-column: span 2;
+}
 .blockTextTwoColumns {
-	background-color: aqua;
+	background-color: rgb(88, 241, 241);
 	display: grid;
 	grid-template-columns: 50% 50%;
 	padding: 3em;
@@ -194,7 +244,7 @@ html {
 .blockTextTwoColumns__title {
 	grid-column: span 2;
 	font-size: 2.8em;
-	color: white;
+	color: rgb(51, 51, 51);
 	margin-bottom: 2rem;
 	padding-left: 2em;
 }
@@ -202,10 +252,28 @@ html {
 	font-family: Arboria-medium;
 	font-size: 1.4em;
 	line-height: 2.5;
-	color: white;
+	color: rgb(51, 51, 51);
 	place-self: center;
 	padding-left: 4em;
 	padding-right: 4em;
+}
+.blockFormulary {
+	background-color: gold;
+	width: 100%;
+	padding-left: 8rem;
+	padding-top: 4rem;
+	display: flex;
+	flex-direction: column;
+}
+.blockFormulary label {
+	padding-bottom: 1.5rem;
+}
+.blockFormulary input {
+	font-size: .8em;
+	padding-left: .5em;
+	height: 2.9rem;
+	width: 60rem;
+	border: none;
 }
 .footerContainer {
 	width: 100%;
